syntax = "proto3";

package protos;

import "common.proto";
import "google/protobuf/timestamp.proto";

// Common Event Entites used for building the webhook payloads

// https://confluence.atlassian.com/bitbucket/event-payloads-740262817.html#EventPayloads-entity_userOwner
message Owner {
    string type = 1;
    string username = 2;
    Links links = 3;
}

// https://confluence.atlassian.com/bitbucket/event-payloads-740262817.html#EventPayloads-entity_repositoryRepository
message Repository {
    Links links = 1;
    Project project = 2;
    string fullName = 3 [json_name="full_name"];
    string website = 4;
    Owner owner = 5;
    // omitted is_private and scm json tags.

}

// https://confluence.atlassian.com/bitbucket/event-payloads-740262817.html#EventPayloads-entity_projectProject
message Project {
    string name = 1;
    string uuid = 2;
    Links links = 3;
}


message Changeset {
    message Head { // git head
        string type = 1;
        string name = 2;
        Commit target = 3;
    } 
    Head new = 1;
    Head old = 2;
    Links links = 3;
    bool closed = 4;
    bool created = 5;
    bool forced = 6;
    repeated Commit commits = 7;
}

message Commit {
    string hash = 1;
    Owner author = 2;
    string message = 3;
    google.protobuf.Timestamp date = 4;
    // ignoring the "parents" field
    Links links = 5;
}

// bitbucket api 1.0 
// https://confluence.atlassian.com/bitbucket/src-resources-296095214.html
message RepoSourceFile {
    string node = 1;
    string path = 2;
    string data = 3;
}